--- a/windows_service.vcxproj.filters
+++ b/windows_service.vcxproj.filters
@@ -32,6 +32,12 @@
     <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="acl_control.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="xadl_utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -50,6 +56,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="acl_control.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="xadl_utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
